--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.3.26",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-calendars": "^1.1313.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0"
