--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-native-picker/picker": "^2.11.2",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "firebase": "^12.3.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-calendars": "^1.1313.0",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0"
   },
   "devDependencies": {
