--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native": "0.81.4",
     "react-native-calendars": "^1.1313.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "^1.26.9",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0"
   },
